--- a/bootstrap-prestructure.htm
+++ b/bootstrap-prestructure.htm
@@ -33,7 +33,6 @@
 
 <body>
 
-
     <div class="container">
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
@@ -57,133 +56,135 @@
         </nav>
     </div>
 
-
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <a href="#" class="navbar-brand"><img src="https://s29.postimg.org/si3lycy5z/horse1.png" height=120 width=120 class="img-responsive" alt="Responsive image">
-                </a>
-            </div>
-
-            <div class="title">
-                <div class="col-md-6">
-                    <h1 class="title-super text-thin name">Nguyen Le</h1>
-                    <h3>Frontend Ninja</h3>
-                </div>
-            </div>
-        </div>
-
-    </div>
-
-
-    <div class="bg">
+    <header>
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
-                    <h2 class="text-muted">About Me</h2>
-                </div>
-
-                <div class="col-md-12">
-                    <div class="hr"></div>
-                </div>
-
                 <div class="col-md-6">
-                    <p>
-                        <br> Hello, I'm Nguyen (Win) from Sacramento, California. I am an aspiring Full-Stack Web Developer currently taking the Full-Stack Web Developer Nanodegree at Udacity. When I was younger, I expressed my creativity and thoughts through drawing. Throughout high school, I taught myself how to use Adobe Photoshop to create layouts, backgrounds, images, flyers, and other graphic works while learning a bit of HTML and CSS along the way. I am the type of person who enjoys creating and building something because to me, it feels rewarding. </p>
+                    <a href="#" class="navbar-brand"><img src="https://s29.postimg.org/si3lycy5z/horse1.png" height=120 width=120 class="img-responsive" alt="Responsive image">
+                    </a>
                 </div>
-                <div class="col-md-6">
-                    <br>
-                    <p>
-                        While I was working full-time at my last job, I came to a realization that that job was not for me. I was introduced to the idea of coding from friends and family and eventually, I resigned from that job to pursue a career in web development. Since then, I have been learning and teaching myself computer programming languages with the help of online resources. It's a long time coming but my goal is to become a Full-Stack Web developer. As a developer, I want to express my way of thinking and creativity through coding and to build amazing web and mobile applications. It would be an incredible journey and experience.
-                    </p>
+
+                <div class="title">
+                    <div class="col-md-6">
+                        <h1 class="title-super text-thin name">Nguyen Le</h1>
+                        <h3>Frontend Ninja</h3>
+                    </div>
                 </div>
             </div>
+
         </div>
-    </div>
+    </header>
 
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <h2 class="text-muted">How I am learning/learned to code</h2>
-            </div>
-        </div>
-
-        <div class="row text-center">
-            <div class="col-md-6">
-                <img src="https://s24.postimg.org/xuhpd74bp/codecademy.png" class="pic" alt="Responsive image">
-
-
-                <h3 class="codes">Codecademy</h3>
-                <p><a href="https://codecademy.com">Link to website</a>
-                </p>
-            </div>
-            <div class="col-md-6">
-                <img src="https://s30.postimg.org/w6aqz8i1t/freecodecamp.png" class="pic" alt="Responsive image">
-
-                <h3 class="codes">Freecodecamp</h3>
-                <p><a href="https://freecodecamp.com">Link to website</a>
-                </p>
-            </div>
-        </div>
-        <div class="row text-center">
-
-            <div class="col-md-6">
-                <img src="https://s24.postimg.org/4lmk2w5lx/mozilla.png" class="pic" alt="Responsive image">
-                <h3 class="codes">Mozilla Developer Network</h3>
-                <p><a href="https://developer.mozilla.org">Link to website</a>
-                </p>
-            </div>
-            <div class="col-md-6">
-                <img src="https://s27.postimg.org/5buiwdwr7/udacity.png" class="pic" alt="Responsive image">
-                <h3 class="codes">Udacity</h3>
-                <p><a href="https://udacity.com">Link to website</a>
-                </p>
-            </div>
-        </div>
-    </div>
-
-
-
-    <div class="bg footer">
-        <div class="container">
-            <div class="row">
-
-                <h2 class="text-muted">
-Contact Me 
-</h2>
-                <!-- Group of Elements -->
-
-                <a href="https://www.facebook.com/nguyen.le.10690" target="blank">
-                    <i class="fa fa-facebook-square fa-3x" aria-hidden="true"></i>
-                </a>
-                <a href="https://www.twitter.com/ns0le" target="blank">
-                    <i class="fa fa-twitter-square fa-3x" aria-hidden="true"></i>
-                </a>
-                <a href="mailto:ucnguyenle@gmail.com" target="blank">
-                    <i class="fa fa-google fa-3x" aria-hidden="true"></i>
-                </a>
-                <a href="https://www.instagram.com/winleezy" target="blank">
-                    <i class="fa fa-instagram fa-3x" aria-hidden="true"></i>
-                </a>
-
+    <section id="content">
+        <div class="bg">
+            <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        All rights reserved. Responsive Web design created by Nguyen Le
+                        <h2 class="text-muted">About Me</h2>
+                    </div>
+
+                    <div class="col-md-12">
+                        <div class="hr"></div>
+                    </div>
+
+                    <div class="col-md-6">
+                        <p>
+                            <br> Hello, I'm Nguyen (Win) from Sacramento, California. I am an aspiring Full-Stack Web Developer currently taking the Full-Stack Web Developer Nanodegree at Udacity. When I was younger, I expressed my creativity and thoughts through drawing. Throughout high school, I taught myself how to use Adobe Photoshop to create layouts, backgrounds, images, flyers, and other graphic works while learning a bit of HTML and CSS along the way. I am the type of person who enjoys creating and building something because to me, it feels rewarding. </p>
+                    </div>
+                    <div class="col-md-6">
+                        <br>
+                        <p>
+                            While I was working full-time at my last job, I came to a realization that that job was not for me. I was introduced to the idea of coding from friends and family and eventually, I resigned from that job to pursue a career in web development. Since then, I have been learning and teaching myself computer programming languages with the help of online resources. It's a long time coming but my goal is to become a Full-Stack Web developer. As a developer, I want to express my way of thinking and creativity through coding and to build amazing web and mobile applications. It would be an incredible journey and experience.
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
 
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h2 class="text-muted">How I am learning/learned to code</h2>
+                </div>
+            </div>
 
-        <script>
-            $('#myModal').on('shown.bs.modal', function() {
-                $('#myInput').focus()
-            })
-        </script>
+            <div class="row text-center">
+                <div class="col-md-6">
+                    <img src="https://s24.postimg.org/xuhpd74bp/codecademy.png" class="pic img-responsive" alt="Responsive image">
 
 
+                    <h3 class="codes">Codecademy</h3>
+                    <p><a href="https://codecademy.com">Link to website</a>
+                    </p>
+                </div>
+                <div class="col-md-6">
+                    <img src="https://s30.postimg.org/w6aqz8i1t/freecodecamp.png" class="pic img-responsive" alt="Responsive image">
 
-    </div>
+                    <h3 class="codes">Freecodecamp</h3>
+                    <p><a href="https://freecodecamp.com">Link to website</a>
+                    </p>
+                </div>
+            </div>
+            <div class="row text-center">
+
+                <div class="col-md-6">
+                    <img src="https://s24.postimg.org/4lmk2w5lx/mozilla.png" class="pic img-responsive" alt="Responsive image">
+                    <h3 class="codes">Mozilla Developer Network</h3>
+                    <p><a href="https://developer.mozilla.org">Link to website</a>
+                    </p>
+                </div>
+                <div class="col-md-6">
+                    <img src="https://s27.postimg.org/5buiwdwr7/udacity.png" class="pic img-responsive" alt="Responsive image">
+                    <h3 class="codes">Udacity</h3>
+                    <p><a href="https://udacity.com">Link to website</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+    <footer>
+        <div class="bg footer">
+            <div class="container">
+                <div class="row">
+
+                    <h2 class="text-muted">
+Contact Me 
+</h2>
+                    <!-- Group of Elements -->
+
+                    <a href="https://www.facebook.com/nguyen.le.10690" target="blank">
+                        <i class="fa fa-facebook-square fa-3x" aria-hidden="true"></i>
+                    </a>
+                    <a href="https://www.twitter.com/ns0le" target="blank">
+                        <i class="fa fa-twitter-square fa-3x" aria-hidden="true"></i>
+                    </a>
+                    <a href="mailto:ucnguyenle@gmail.com" target="blank">
+                        <i class="fa fa-google fa-3x" aria-hidden="true"></i>
+                    </a>
+                    <a href="https://www.instagram.com/winleezy" target="blank">
+                        <i class="fa fa-instagram fa-3x" aria-hidden="true"></i>
+                    </a>
+
+                    <div class="row">
+                        <div class="col-md-12">
+                            All rights reserved. Responsive Web design created by Nguyen Le
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <script>
+                $('#myModal').on('shown.bs.modal', function() {
+                    $('#myInput').focus()
+                })
+            </script>
+
+
+        </div>
+    </footer>
 
 </body>
 
