--- a/bootstrap-prestructure.htm
+++ b/bootstrap-prestructure.htm
@@ -82,11 +82,11 @@
                     <div class="col-md-12">
                         <h2 class="text-muted">About Me</h2>
                     </div>
-
+<div class="row">
                     <div class="col-md-12">
                         <div class="hr"></div>
-                    </div>
-
+                    </div></div>
+<div class="row">
                     <div class="col-md-6">
                         <p>
                             <br> Hello, I'm Nguyen (Win) from Sacramento, California. I am an aspiring Full-Stack Web Developer currently taking the Full-Stack Web Developer Nanodegree at Udacity. When I was younger, I expressed my creativity and thoughts through drawing. Throughout high school, I taught myself how to use Adobe Photoshop to create layouts, backgrounds, images, flyers, and other graphic works while learning a bit of HTML and CSS along the way. I am the type of person who enjoys creating and building something because to me, it feels rewarding. </p>
@@ -98,6 +98,7 @@
                         </p>
                     </div>
                 </div>
+              </div>
             </div>
         </div>
 
